--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ furthering of human values ([[?ETHICAL-WEB]], [[?design-principles]]). One of th
 Web serves people is by protecting them in the face of asymmetries of power and this includes
 establishing and enforcing rules to govern the power of data.
 
-<dfn>Data governance</dfn> is the system of [=rules=] that regulate [=information flows=]. When
+<dfn data-lt="governance">Data governance</dfn> is the system of [=rules=] that regulate [=information flows=]. When
 [=people=] are involved in these [=information flows=], [=data governance=] determines how
 these rules constrain and distribute the power of information between different [=actors=].
 The <dfn>rules</dfn> describe the way in which different [=actors=] may, must,
@@ -550,7 +550,7 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
   <dt><dfn class="export">Duty of Discretion</dfn></dt>
   <dd>
     Discretion requires the [=user agent=] to make best efforts to enforce
-    [=norms=] by placing limits on the flow and
+    [=rules=] by placing limits on the flow and
     [=processing=] of [=personal data=] that it can reasonably detect. Discretion is not
     confidentiality or secrecy: trust
     can be preserved even when the [=user agent=] shares some [=personal data=], so long as
@@ -619,7 +619,7 @@ among several contexts.
 <dfn>Cross-context recognition</dfn> is the act of recognising that an [=identity=] in one
 [=context=] is the same [=person=] as an [=identity=] in another [=context=]. [=Cross-context
 recognition=] can at times be [=appropriate=] but anyone who does it needs to be careful not to
-apply the [=norms=] of one [=context=] in ways that violate the [=norms=] around use of information
+apply the [=rules=] of one [=context=] in ways that violate the [=rules=] around use of information
 acquired in a different [=context=]. (For example, if you meet your therapist at a cocktail party,
 you expect them to have rather different discussion topics with you than they usually would, and
 possibly even to pretend they do not know you.) This is particularly true for [=vulnerable=] people
@@ -678,7 +678,7 @@ recognition. For example if two or more services that a person needs to use insi
 a difficult-to-forge piece of their identity in order to use the services, it's the services
 behaving [=inappropriately=] rather than the [=user agent=].
 
-If a [=site=] includes multiple [=contexts=] whose [=norms=] indicate that it's [=inappropriate=] to
+If a [=site=] includes multiple [=contexts=] whose [=rules=] indicate that it's [=inappropriate=] to
 share data between the contexts, the fact that those distinct [=contexts=] fall inside a single
 [=machine-enforceable context=] doesn't make sharing data or [=cross-context
 recognition|recognizing=] [=identities=] any less [=inappropriate=].
@@ -786,12 +786,12 @@ of an event that occurs nearly-simultaneously on both sites.
 
 We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
 indirectly about an identified or identifiable [=person=], such as by reference to an
-[=identifier=] ([[GDPR]], [[OECD-GUIDELINES]], [[Convention-108]]).
+[=identifier=] ([[GDPR]], [[OECD-Guidelines]], [[Convention-108]]).
 
 If a [=person=] could reasonably be identified or re-identified when [=data=] is combined with other
 [=data=], then that makes that data [=personal data=].
 
-## Data users and use {#data-users}
+### Data users and use {#data-users}
 
 A <dfn data-lt="data processor">service provider</dfn> or [=data processor=] is considered to be the same
 [=party=] as the entity contracting it to perform the relevant [=processing=] if it:
@@ -1063,7 +1063,7 @@ three privacy tiers:
     should also be defined differently for certain kinds of [=contexts=]. The legitimate
     [=processing=] that can take place in this tier derives its legitimacy from matching the
     expectations and interests of both the [=person=] and the [=first party=] they're interacting with
-    relationship, as guided by the applicable [=norms=]. If the [=first party=] has knowledge
+    relationship, as guided by the applicable [=rules=]. If the [=first party=] has knowledge
     of the person's [=identity=], it should make the [=identity=] it is using for the person,
     along with its own branding as the [=data controller], obvious to the person.
     [[?Twitter-Developer-Policy]] This tier is more [=appropriate=] the more the [=first party=]
@@ -1190,7 +1190,7 @@ data-cite="RFC6973#section-5.1.1">RFC6973§5.1.1</a>.
 
 <dt><dfn>Intrusion</dfn>
 
-<dd> Intrusion consists of invasive acts that disturb or interrupt one’s life or
+<dd> [=Intrusion=] consists of invasive acts that disturb or interrupt one’s life or
     activities. See <a
     data-cite="RFC6973#section-5.1.3">RFC6973§5.1.3</a>.
 
