Example of an information sharing norm
SHA: a27212bb7e7cbe540e55e9c4d9ccfa1880beae35
Reason: push, by @jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -680,8 +680,8 @@ cocktail party is more open. Information about what a person searches or shops f
 be used to improve their future search results, but shouldn't be used to affect a job
 application or even to gossip with their neighbors. Information about where a person is
 trying to go can be used to help them get there, but not to tell their partner they're
-cheating. Interruptions from chat partners are expected, but flashing ads and
-notifications about irrelevant products aren't.</p>
+cheating.  Automatic suggestions of names of co-workers and friends are expected on messaging
+or collaboration sites, but suggestion of the names of people who rode the same bus are not.</p>
 </aside><p>When <a data-link-type="dfn" href="#dfn-norm" class="internalDFN" id="ref-for-dfn-norm-2">norms</a> are respected in a given <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-5">context</a>, we can say that <dfn class="export" data-export="" id="dfn-contextual-integrity" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">contextual integrity</dfn> is maintained; otherwise that it is violated
 ([<cite><a class="bibref" data-link-type="biblio" href="#bib-privacy-in-context" title="Privacy in Context">PRIVACY-IN-CONTEXT</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-privacy-as-ci" title="Privacy As Contextual Integrity">PRIVACY-AS-CI</a></cite>]).</p><div class="issue" id="issue-container-generatedID-1"><div role="heading" class="issue-title marker" id="h-issue-2" aria-level="3"><span>Issue</span></div><aside class="">
 
