Fix the wording around legal meanings for "fiduciary".

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
 
 These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. In academic
 research, this relationship with a [=trustworthy agent=] is often described as "fiduciary"
-[[?FIDUCIARY-UA]]. Various legal systems have a similar meaning for "fiduciary duties".
+[[?FIDUCIARY-UA]]. Some jurisdictions may have a distinct legal meaning for "fiduciary".
 
 ## Guardians and Device Owners {#guardians-and-owners}
 
