Remove "as is more respectable"
Co-authored-by: Daniel Appelquist <dan@torgo.com>

--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ form upon submission).
 Additionally, <dfn data-lt="privacy-labor">privacy labour</dfn> is the practice of having
 a [=person=] carry out the work of ensuring [=data processing=] of which they are the
 subject is [=appropriate=], instead of having the [=parties=] be responsible for that
-work as is more respectable. Data systems that are based on asking [=people=] for their
+work. Data systems that are based on asking [=people=] for their
 [=consent=] tend to increase [=privacy labour=].
 
 # How the World Sees Us {#data-privacy}
