--- a/index.html
+++ b/index.html
@@ -447,8 +447,9 @@ form upon submission).
 
 <dfn data-lt="privacy labor">Privacy labour</dfn> is the practice of having a [=person=] carry out
 the work of ensuring [=data processing=] of which they are the subject or recipient is
-[=appropriate=], instead of having the [=parties=] be responsible for that work as is more
-respectable.
+[=appropriate=], instead of having the [=parties=] be responsible for that work.
+Data systems that are based on asking [=people=] for their [=consent=] tend to increase
+[=privacy labour=].
 
 More generally, implementations of [=privacy=] are often dominated by self-governing approaches that
 offload labour to [=people=]. This is notably true of the regimes descended from the
@@ -583,8 +584,9 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
   </dd>
 </dl>
 
-In academic research, this relationship with a [=trustworthy agent=] is often described as
-"fiduciary" [[?Fiduciary-UA]].
+These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. In academic
+research, this relationship with a [=trustworthy agent=] is often described as "fiduciary"
+[[?Fiduciary-UA]]. Some jurisdictions may have a distinct legal meaning for "fiduciary".
 
 Many of the [=rules=] described in the rest of this document extend the [=user agent=]'s duties and
 make them more precise.
@@ -785,7 +787,7 @@ of an event that occurs nearly-simultaneously on both sites.
 </aside>
 
 We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
-indirectly about an identified or identifiable [=person=], such as by reference to an
+indirectly related to an identified or identifiable [=person=], such as by reference to an
 [=identifier=] ([[GDPR]], [[OECD-Guidelines]], [[Convention-108]]).
 
 If a [=person=] could reasonably be identified or re-identified when [=data=] is combined with other
