fixes from the call

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           href: 'https://www.pewresearch.org/internet/2019/11/15/americans-and-privacy-concerned-confused-and-feeling-lack-of-control-over-their-personal-information/',
           publisher: 'Pew Research Center',
         },
-        'Privact-Contested': {
+        'Privacy-Contested': {
           title: 'Privacy is an essentially contested concept: a multi-dimensional analytic for mapping privacy',
           authors: ['Deirdre K. Mulligan', 'Colin Koopman', 'Nick Doty'],
           href: 'https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5124066/',
@@ -269,7 +269,7 @@
 
 <section id="abstract">
 
-Privacy is an essential part of the Web [[?ETHICAL-WEB]]. This document provides definitions
+Privacy is an essential part of the Web ([[?ETHICAL-WEB]]). This document provides definitions
 for privacy and related concepts that are applicable worldwide. It also provides a set of privacy
 principles that should guide the development of the Web as a trustworthy platform. People using
 the Web would benefit from a stronger relationship between technology and policy, and this
@@ -296,7 +296,7 @@ conclusion of the task force, the TAG intends to adopt this document as a Findin
 Privacy is covered by legal frameworks and this document recognises that existing data
 protection laws take precedence for legal matters. However, because the Web is global, we
 benefit from having shared concepts to guide its evolution as a system built for the people using it
-[[?RFC8890]]. A clear and well-defined view of privacy on the Web, informed by research,
+([[?RFC8890]]). A clear and well-defined view of privacy on the Web, informed by research,
 can hopefully help all the Web's participants in different legal regimes. Our shared
 understanding is that the law is a floor, not a ceiling.
 
@@ -346,7 +346,7 @@ need of protection. The focus of this document concerns leveraging this power di
 people, but the same techniques are also used to leverage the power of information against other
 entities, such as companies or governments.
 
-The [=rules=] that apply vary from [=context=] to [=context=] ([[?Understanding-Privacy]]): people
+The [=rules=] that apply vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?CI]]): people
 have different expectations of [=privacy=] at work, at a café, or at home. Understanding and
 evaluating a privacy situation is best done by clearly identifying:
 
@@ -480,7 +480,7 @@ and choice</em>, which, in today's digital environment, is often a strong indica
 
 ## Collective Governance {#collective}
 
-Privacy [=rules=] are socially negotiated and often contested ([[?Privact-Contested]]). This makes
+Privacy [=rules=] are socially negotiated and often contested ([[?Privacy-Contested]]). This makes
 privacy a problem of collective action ([[?GKC-Privacy]]).
 
 Population-level [=data processing=] may impact populations or individuals, including in
