be more principled

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script src="https://www.w3.org/Tools/respec/respec-w3c" defer class="remove"></script>
-  <title>Privacy Rules</title>
+  <title>Privacy Principles</title>
   <script class="remove">
     // All config options at https://respec.org/docs/
     var respecConfig = {
@@ -304,7 +304,7 @@ understanding is that the law is a floor, not a ceiling.
 
 </section>
 
-# Understanding Privacy Rules {#intro}
+# Understanding Privacy Principles {#intro}
 
 Information is power. It can be used to predict and to influence people, as well as to design online
 spaces that control people's behaviour. The collection and [=processing=] of information in greater
@@ -335,13 +335,13 @@ or must not produce or [=process=] flows of information from, to, or about other
 human impact, either by involving [=personal data=] or by exerting action over [=people=], and the
 [=rules=] are followed appropriately. When the governance situation has human impact but the
 [=rules=] are not followed, there is a <dfn>privacy violation</dfn>. Similarly, we say that a
-particular interaction is <dfn data-lt="appropriately">appropriate</dfn> when the rules are adhered
+particular interaction is <dfn data-lt="appropriately">appropriate</dfn> when the [=rules=] are adhered
 to) or <dfn data-lt="inappropriately">inappropriate</dfn> otherwise.
 
 Typically, <dfn>actors</dfn> are [=people=] but they can also be collective endeavours such as
 companies, associations, or political parties (eg. in the case of espionage), which are known as
 [=parties=]. It is important to keep in mind that not all people are equal in how they may resist
-the imposition of unfair rules, some [=people=] are more [=vulnerable=] and therefore in greater
+the imposition of unfair [=rules=], some [=people=] are more [=vulnerable=] and therefore in greater
 need of protection. The focus of this document concerns leveraging this power differential against
 people, but the same techniques are also used to leverage the power of information against other
 entities, such as companies or governments.
@@ -356,7 +356,7 @@ evaluating a privacy situation is best done by clearly identifying:
 * The [=rules=] that are in use in this specific context.
 
 It is important to keep in mind that there are <em>always</em> privacy [=rules=]. There is no
-purportedly neutral situation in which no rules apply. We must therefore determine which [=rules=]
+purportedly neutral situation in which no [=rules=] apply. We must therefore determine which [=rules=]
 best serve human values ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
 <dfn data-lt='information'>Information flows</dfn> are relevant to privacy whenever people are
@@ -502,7 +502,7 @@ collective ([[?Seeing-Like-A-State]]).
 Setting [=rules=] for privacy is <dfn data-lt="legitimacy">legitimate</dfn> when it is based on a
 form of open consensus process; <dfn data-lt="illegitimacy">illegitimate</dfn> otherwise.
 For example, it is often considered [=legitimate=] for a government, under the control of its
-citizens, to maintain a database of license plates for the [=purpose=] of enforcing the rules of the
+citizens, to maintain a database of license plates for the [=purpose=] of enforcing the [=rules=] of the
 road. It would be [=illegitimate=] to observe the same license plates near places of worship to
 build a database of religious identity.
 
@@ -594,20 +594,20 @@ make them more precise.
 
 
 
-# Rules for Privacy on the Web
+# Principles for Privacy on the Web
 
 As indicated above, different [=contexts=] require different [=rules=]. This section describes a set
 of [=rules=] designed to apply to the Web [=context=] in general. The Web is a big place, and we
 fully expect more specific [=contexts=] of the Web to add their own [=rules=] to further constrain
 [=information flows=].
 
-To the extent possible, [=user agents=] are expected to enforce these rules. However, this is not
+To the extent possible, [=user agents=] are expected to enforce these [=rules=]. However, this is not
 always possible and additional enforcement mechanisms are needed. One particularly salient issue
 is that a [=context=] is not defined in terms of who own it (it is not a [=party=]). Sharing
 [=data=] between different services of a single company is just as much a [=privacy violation=] as
 if the same data were shared between unrelated [=parties=].
 
-## Rules for Identity on the Web {#identity}
+## Principles for Identity on the Web {#identity}
 
 <aside class="issue">
   This section has not been edited for narrative.
@@ -780,7 +780,7 @@ collecting the same piece of identifying information on both sites, or by correl
 of an event that occurs nearly-simultaneously on both sites.
 
 
-## Rules for Personal Data {#data}
+## Principles for Personal Data {#data}
 
 <aside class="issue">
   This section has not been edited for narrative.
@@ -875,7 +875,7 @@ making sure that:
 Note that [=controlled de-identified data=], on its own, is not sufficient to render [=data processing=]
 [=appropriate=].
 
-## Rules for Sensitive Information {#hl-sensitive-information}
+## Principles for Sensitive Information {#hl-sensitive-information}
 
 Contributes to [=correlation=], [=identification=], [=secondary use=], and
 [=disclosure=].
@@ -915,7 +915,7 @@ a person, consider at least these factors:
 Issue(16): This description of what makes information sensitive still needs to
 be refined.
 
-## Rules for Profiling {#hl-unexpected-profiling}
+## Principles for Profiling {#hl-unexpected-profiling}
 
 <aside class="issue">
   This section has not been edited for narrative.
@@ -974,7 +974,7 @@ or personalize content around his furry-interest.
 
 </div>
 
-## Rules for Safety Systems {#safety}
+## Principles for Safety Systems {#safety}
 
 <aside class="issue">
   This section has not been edited for narrative.
@@ -991,36 +991,36 @@ from users.
 </aside>
 
 
-## Rules for Guardians and Device Owners {#guardians-and-owners}
+## Principles for Guardians and Device Owners {#guardians-and-owners}
 
 <aside class="issue" data-number="2">
 </aside>
 
-## Rules for Influence and Manipulation
+## Principles for Influence and Manipulation
 
 <aside class="issue">
   This section has not been written.
 </aside>
 
-## Rules for Harassment
+## Principles for Harassment
 
 <aside class="issue">
   This section has not been written.
 </aside>
 
-## Rules for Unwanted Information
+## Principles for Unwanted Information
 
 <aside class="issue">
   This section has not been written.
 </aside>
 
-## Rules for Vulnerable People
+## Principles for Vulnerable People
 
 <aside class="issue">
   This section has not been written.
 </aside>
 
-## Rules for Notifications and Interruptions
+## Principles for Notifications and Interruptions
 
 <aside class="issue">
   This section has not been written.
