remove underlying political theory of legitimacy

--- a/index.html
+++ b/index.html
@@ -501,13 +501,6 @@ categorisation of people, voluntary or not, will change the way in which the wor
 This can produce self-reinforcing loops that can have deleterious effects both individual and
 collective ([[?Seeing-Like-A-State]]).
 
-Setting [=rules=] for privacy is <dfn data-lt="legitimacy">legitimate</dfn> when it is based on a
-form of open consensus process; <dfn data-lt="illegitimacy">illegitimate</dfn> otherwise.
-For example, it is often considered [=legitimate=] for a government, under the control of its
-citizens, to maintain a database of license plates for the [=purpose=] of enforcing the [=rules=] of the
-road. It would be [=illegitimate=] to observe the same license plates near places of worship to
-build a database of religious identity.
-
 In general, collective issues in [=data=] require collective solutions. The goal of
 [=data governance=] in Web standards is the development of structural controls
 in [=user agents=] and the creation of institutions that can handle issues of [=privacy=].
@@ -518,7 +511,7 @@ Collecting data at large scales can have significant pro-social outcomes. Proble
 emerge when entities take part in dual-use collection in which [=data=] is [=processed=]
 for collective benefit but also for [=self-dealing=] [=purposes=].
 The [=self-dealing=] [=purposes=] will be justified as bankrolling the pro-social outcomes,
-which, without collective oversight, cannot be [=legitimate=].
+which, without collective oversight, cannot be legitimate.
 
 ## People's Agents {#user-agents}
 
