--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ to people and assume perfect, unlimited [=autonomy=], the [=FIPs=] do not forbid
 types of [=data processing=] but only place them under different procedural requirements.
 Such an approach is [=appropriate=] for [=parties=] that are processing data in the 1970s.
 
-One notable issue with procedural approaches to privacy is that they tend to have the same
+One notable issue with procedural, self-governing approaches to privacy is that they tend to have the same
 requirements in situations where people find themselves in a significant asymmetry of
 power with a [=party=] — for instance a [=person=] using an essential service provided by a
 monopolistic platform — and those where people and [=parties=] are very much on equal
