transparency and research

--- a/index.html
+++ b/index.html
@@ -513,6 +513,20 @@ for collective benefit but also for [=self-dealing=] [=purposes=].
 The [=self-dealing=] [=purposes=] will be justified as bankrolling the pro-social outcomes,
 which, without collective oversight, cannot be legitimate.
 
+### Transparency and Research {#transparency}
+
+While transparency is rarely of any help in informing the individual choices that [=people=] may
+make or in increasing their [=autonomy=], it is instrumental to support the accountability work
+that can be performed by researchers and reporters as it plays a critical role in informing
+collective decision-making with respect to privacy [=rules=]. This consideration extends the
+TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2015/11/strong-web-platform-statement/)
+to ensure that "<em>broad testing and audit continues to be possible</em>" where
+[=information flows=] and automated decisions are involved.
+
+Such transparency can only function if there are strong rights of access to data (including data
+derived from one's personal data) as well as mechanisms to explain the outcomes of automated
+decisions.
+
 ## People's Agents {#user-agents}
 
 The <dfn>user agent</dfn> acts as an intermediary between a [=person=] (its [=user=]) and the web.
@@ -870,6 +884,15 @@ making sure that:
 Note that [=controlled de-identified data=], on its own, is not sufficient to render [=data processing=]
 [=appropriate=].
 
+### Rights {#data-rights}
+
+<aside class="issue">
+  Write this.
+</aside>
+<!--
+  * This should include access, deletion, portability, correction.
+-->
+
 ## Principles for Sensitive Information {#hl-sensitive-information}
 
 Contributes to [=correlation=], [=identification=], [=secondary use=], and
@@ -996,6 +1019,10 @@ from users.
 <aside class="issue">
   This section has not been written.
 </aside>
+
+<!--
+  * Part of the threat here should include the manipulation of free and fair elections
+-->
 
 ## Principles for Harassment
 
