--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ or by slowing down the person in their decision. For example, the
 [=user agent=] will make it difficult for that [=person=] to connect to a site if it can't verify
 that the site is authentic. It will check that that [=person=] really intends to expose a
 sensitive device to a page. It will prevent that [=person=] from consenting to the permanent
-monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
+monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> include
 ([[?Taking-Trust-Seriously]]):
 
 <dl>
