--- a/index.html
+++ b/index.html
@@ -889,6 +889,17 @@ Note that [=controlled de-identified data=], on its own, is not sufficient to re
 <aside class="issue">
   Write this.
 </aside>
+
+To the extent possible, [=people=] should retain a certain number of rights over their data, and
+these rights should be facilitated by the [=parties=]. While data rights are a self-governing
+mechanism that is not sufficient to support [=privacy=], they do complement self-determination and
+help improve accountability. Such rights should include:
+
+* The right to <em>access</em> [=data=] about oneself.
+* The right to <em>erase</em> [=data=] about oneself, with or without terminating the service (though
+  what [=data=] can be erased may differ between those two cases).
+* The right to <em>port</em> information that one has stored with a given [=party=] in such a way
+  that it can e
 <!--
   * This should include access, deletion, portability, correction.
 -->
