--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@ furthering of human values ([[?ETHICAL-WEB]], [[?design-principles]]). One of th
 Web serves people is by protecting them in the face of asymmetries of power and this includes
 establishing and enforcing rules to govern the power of data.
 
-The Web is a social and technical system materialised by [=information flows=], and this document
-focuses on [=privacy=] as it applies to information.
+The Web is a social and technical system materialised by [=information flows=]. Because this document
+focuses on [=privacy=] as it applies to the Web, it also focuses on privacy around information flows.
 <dfn data-lt="governance">Data governance</dfn> is the system of [=rules=] that regulate [=information flows=]. When
 [=people=] are involved in these [=information flows=], [=data governance=] determines how
 these rules constrain and distribute the power of information between different [=actors=].
