--- a/index.html
+++ b/index.html
@@ -312,9 +312,8 @@ volume, with greater precision and reliability, with increasing interoperability
 variety of data types, and at increasing speed is leading to an unprecedented concentration of power
 that threatens private and public liberties.
 
-What's more, automation and the increasing computerisation of all aspects of our lives make it
-possible for comparatively small groups to project power at a distance both in space and time. This
-both increases the power of information and decreases the cost of a number of intrusive antisocial
+What's more, automation and the increasing computerisation of all aspects of our lives
+both increase the power of information and decrease the cost of a number of intrusive
 behaviours that would be more easily kept in check if the perpetrator had to be in the same room as
 the victim.
 
