q and cite EthWeb

--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@ behaviours that would be more easily kept in check if the perpetrator had to be 
 the victim.
 
 These asymmetries of information and of automation create commanding asymmetries of power. It is not
-so much that "<em>code is law</em>"  but rather that code is judge, jury, and executioner.
+so much that <q>code is law</q>  but rather that code is judge, jury, and executioner.
 
-The Web is for everyone ([[?For-Everyone]]). Its purpose is to serve people and to support the
-furthering of human values ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
+The Web is for everyone ([[?For-Everyone]]). It is <q>a platform that helps people and provides a
+net positive social benefit</q> ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
 Web serves people is by protecting them in the face of asymmetries of power and this includes
 establishing and enforcing rules to govern the power of data.
 
@@ -519,7 +519,7 @@ make or in increasing their [=autonomy=], it is instrumental to support the acco
 that can be performed by researchers and reporters as it plays a critical role in informing
 collective decision-making with respect to privacy [=rules=]. This consideration extends the
 TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2015/11/strong-web-platform-statement/)
-to ensure that "<em>broad testing and audit continues to be possible</em>" where
+to ensure that <q>broad testing and audit continues to be possible</q> where
 [=information flows=] and automated decisions are involved.
 
 Such transparency can only function if there are strong rights of access to data (including data
@@ -822,8 +822,8 @@ of data processing. Any [=party=] that is not a [=service provider=] is a [=data
 
 ### Techniques {#data-techniques}
 
-The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which "<em>what happens with the
-[=first party=] stays with the [=first party=]</em>." Put differently, the [=Vegas Rule=] is followed
+The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which <q>what happens with the
+[=first party=] stays with the [=first party=]</q>. Put differently, the [=Vegas Rule=] is followed
 when the [=first party=] is the only [=data controller=]. While the [=Vegas Rule=] is a good
 guideline, it's neither necessary nor sufficient for [=appropriate=] [=data processing=]. A [=first
 party=] that maintains exclusive access to a person's data can still [=process=] it
